完成首个版本晨报填写工具开发

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,17 +27,17 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a class="navbar-brand" href="/">Blog</a>
+                            <a class="navbar-brand" href="/">写晨报</a>
                         </li>
                         <li>
-                            <a href="{% block articles_url %}{% endblock %}"><i class="icon-list-alt" style="margin-right: 3px"></i>所有文章</a>
+                            <a href="/report"><i class="icon-list-alt" style="margin-right: 3px"></i>今日晨报</a>
                         </li>
-                        <li>
-                            <a href="{% block tags_url %}{% endblock %}"><i class="icon-tags" style="margin-right: 3px"></i>标签云</a>
-                        </li>
-                        <li>
-                            <a href="{% block about_url %}{% endblock %}"><i class=" icon-star" style="margin-right: 3px"></i>关于</a>
-                        </li>
+{#                        <li>#}
+{#                            <a href="{% block tags_url %}{% endblock %}"><i class="icon-tags" style="margin-right: 3px"></i>标签云</a>#}
+{#                        </li>#}
+{#                        <li>#}
+{#                            <a href="{% block about_url %}{% endblock %}"><i class=" icon-star" style="margin-right: 3px"></i>关于</a>#}
+{#                        </li>#}
                     </ul>
 {#                    <ul class="nav navbar-nav navbar-right">#}
 {#                        <li>#}
