--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,80 @@
 {% extends "base_page.html" %}
 
 {% block title %}
-    DOCS
+    填写晨报
 {% endblock %}
 
 {% block content %}
     <div class="container theme-showcase">
-        <h1 class="font-xihei">Docs</h1>
+        <h1 class="font-xihei" id="date-title">晨报填写</h1>
+        <div>
+            <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">提交</button>
+            <!-- 模态框（Modal） -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                 aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title" id="myModalLabel">提示</h4>
+                        </div>
+                        <div class="modal-body">
+                            <label>请选择人员，并确认提交</label>
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="btn-name"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                    <span id="label-name">选择姓名</span>
+                                    <span class="caret"></span>
+                                </button>
+                                <ul id="ul-users" class="dropdown-menu" aria-labelledby="btn-name">
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                            <button type="button" class="btn btn-primary" id="btn-commit">确认</button>
+                        </div>
+                    </div><!-- /.modal-content -->
+                </div><!-- /.modal -->
+            </div>
+        </div>
 
-    <p class="lead font-xihei">Docs</p>
+        <div>
+            <div class="row">
+{#                <div class="col-sm-6 col-md-4">#}
+{#                    <div class="thumbnail">#}
+{#                        <div class="caption">#}
+{#                            <h3>昨日计划</h3>#}
+{#                            <div id="div-yesterday-todo-tasks"></div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+                <div id="diy-yesterday-done" class="col-sm-6 col-md-6">
+                    <div class="thumbnail">
+                        <div class="caption">
+                            <h3>昨日已完成</h3>
+                            <div id="div-yesterday-done-tasks"></div>
+                            <a class="btn btn-default" role="button" id="btn-yesterday-done-add">新增条目</a>
+                        </div>
+                    </div>
+                </div>
+                <div id="div-today" class="col-sm-6 col-md-6">
+                    <div class="thumbnail">
+                        <div class="caption">
+                            <h3>今日计划</h3>
+                            <div id="div-today-tasks"></div>
+                            <a class="btn btn-default" role="button" id="btn-today-add">新增条目</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
     </div>
+{% endblock %}
+
+{% block self_js %}
+    <script type="text/javascript" src="{{ url_for('static', filename='js/src/utils.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/src/personal_report.js') }}"></script>
 {% endblock %}
